--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0px;
-      background-color: #262626;
+      background-color: black;
       }
       p{
       font-size: 8px;
